--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "tiny-lr": "1.0.3",
     "tslint": "3.15.1",
     "tslint-eslint-rules": "1.5.0",
-    "uglify-js": "2.7.3",
+    "uglify-js": "mishoo/UglifyJS2.git#harmony-v2.7.5",
     "webpack": "2.2.0-rc.3",
     "ws": "1.1.1",
     "xml2js": "^0.4.17"
